# ray-tracy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  copyshared.cmake
include/: camera.h  common.h  display.h  geom.h  hittable.h  light.h  threading.h  utils.h
src/: camera.cpp  display.cpp  geom.cpp  hittable.cpp  light.cpp  main.cpp  threading.cpp  utils.cpp  vulkan_test.cpp
